# flake8-stepdown

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  README.md  lint.sh  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  conftest.py  profile_stages.py  test_benchmarks.py
flake8_stepdown/: __init__.py  cli.py  flake8_plugin.py  reporter.py  rewriter.py  types.py
flake8_stepdown/core/: __init__.py  bindings.py  graph.py  ordering.py  parser.py  references.py
scripts/: depgraph.py
tests/: test_bindings.py  test_cli.py  test_flake8_plugin.py  test_graph.py  test_ordering.py  test_parser.py  test_references.py  test_reporter.py  test_rewriter.py
tests/fixtures/: already_correct.py  comments_between_functions.py  constant_docstrings.py  constants_between_functions.py  decorator_ordering.py  main_guard.py  mutual_recursion.py  simple_bottomup.py  simple_topdown.py
tests/robustness/: projects.json  run_robustness.sh
tests/snapshots/: comments_between_functions.py  constant_docstrings.py  constants_between_functions.py  decorator_ordering.py  main_guard.py
